Update ipdc lpdc help text

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -76,7 +76,7 @@
                 </:content>
               </Item>
               <Item>
-                <:label>Links naar IPDC/LPDC</:label>
+                <:label>Link naar IPDC/LPDC</:label>
                 <:content>
                   <IpdcMultipleSelect
                     @selected={{this.draftIpdcProducts}}
@@ -168,7 +168,7 @@
               </:content>
             </Item>
             <Item>
-              <:label>Links naar IPDC/LPDC</:label>
+              <:label>Link naar IPDC/LPDC</:label>
               <:content>
                 {{#if this.process.ipdcProducts.length}}
                   {{#each this.process.ipdcProducts as |product|}}
