--- a/app/components/navigation-bar.hbs
+++ b/app/components/navigation-bar.hbs
@@ -8,7 +8,7 @@
       </Tab>
       {{#if this.currentSession.canEdit}}
         <Tab>
-          <AuLink @route="shared-processes" @icon="upload">
+          <AuLink @route="shared-processes" @icon="unordered-list">
             Gedeelde processen
           </AuLink>
         </Tab>
