--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -110,7 +110,7 @@
         {{else}}
           <c.body as |process|>
             <td>
-              <CustomIcon @icon={{"content-book-favorite-star"}} />
+              <CustomIcon @icon={{"Blauwdruk-icon"}} />
 
               <LinkTo
                 class="au-c-link"
