--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -110,8 +110,7 @@
         {{else}}
           <c.body as |process|>
             <td>
-              <CustomIcon @icon={{"Blauwdruk-icon"}} />
-
+              <CustomIcon @icon={{"Blauwdruk-icon"}} @size="large" />
               <LinkTo
                 class="au-c-link"
                 @model={{process.id}}
