Introduce custom pdf viewer

--- a/app/components/pdf-viewer.hbs
+++ b/app/components/pdf-viewer.hbs
@@ -1,12 +1,4 @@
-<div
+<canvas
   class="bpmn-container au-u-margin-top-small"
   {{did-insert this.setupViewer}}
->
-  {{! template-lint-disable require-valid-alt-text }}
-  <object
-    data="{{this.pdfBlobUrl}}"
-    type="application/pdf"
-    width="100%"
-    height="100%"
-  />
-</div>
+></canvas>
