--- a/app/styles/components/_bpmn-viewer.scss
+++ b/app/styles/components/_bpmn-viewer.scss
@@ -16,3 +16,15 @@
 .bjs-powered-by {
   display: none;
 }
+
+.pdf-navigation {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 10;
+
+  .navigation-counter {
+    text-decoration: none !important;
+    cursor: default;
+  }
+}
