--- a/app/components/pdf-viewer.hbs
+++ b/app/components/pdf-viewer.hbs
@@ -1,31 +1,35 @@
 <div
-  class="bpmn-container au-u-margin-top-small"
+  class="bpmn-container au-u-margin-top-small au-u-flex au-u-flex--center au-u-flex--vertical-center"
   {{did-insert this.setupViewer}}
 >
-  <AuButtonGroup
-    @inline="true"
-    class="pdf-navigation au-u-padding au-u-padding-small"
-  >
-    <AuButton
-      @icon="chevron-left"
-      @iconAlignment="left"
-      @hideText="true"
-      {{on "click" this.goToPreviousPage}}
+  {{#if this.isLoading}}
+    <AuLoader />
+  {{else}}
+    <AuButtonGroup
+      @inline="true"
+      class="pdf-navigation au-u-padding au-u-padding-small"
     >
-      Vorige
-    </AuButton>
-    <AuButton @skin="secondary" class="navigation-counter au-u-regular">
-      {{this.currentPage}}
-      /
-      {{this.totalPages}}
-    </AuButton>
-    <AuButton
-      @icon="chevron-right"
-      @iconAlignment="right"
-      @hideText="true"
-      {{on "click" this.goToNextPage}}
-    >
-      Volgende
-    </AuButton>
-  </AuButtonGroup>
+      <AuButton
+        @icon="chevron-left"
+        @iconAlignment="left"
+        @hideText="true"
+        {{on "click" this.goToPreviousPage}}
+      >
+        Vorige
+      </AuButton>
+      <AuButton @skin="secondary" class="navigation-counter au-u-regular">
+        {{this.currentPage}}
+        /
+        {{this.totalPages}}
+      </AuButton>
+      <AuButton
+        @icon="chevron-right"
+        @iconAlignment="right"
+        @hideText="true"
+        {{on "click" this.goToNextPage}}
+      >
+        Volgende
+      </AuButton>
+    </AuButtonGroup>
+  {{/if}}
 </div>
