add blueprint icon to overviews

--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -110,7 +110,9 @@
         {{else}}
           <c.body as |process|>
             <td>
-              <CustomIcon @icon={{"Blauwdruk-icon"}} @size="large" />
+              {{#if process.isBlueprint}}
+                <CustomIcon @icon={{"Blauwdruk-icon"}} @size="large" />
+              {{/if}}
               <LinkTo
                 class="au-c-link"
                 @model={{process.id}}
