--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -7,7 +7,14 @@
           class="au-o-box au-o-box--small au-o-flow au-o-flow--small au-u-padding"
         >
           <h1 class="au-u-h3 au-u-medium">Filters</h1>
-          <ProcessFilterByBlueprint @onChange={{this.filterByBlueprint}} />
+          <div class="au-u-flex au-u-flex--between au-u-flex--vertical-center">
+            <AuLabel for="filter-blueprint">Blauwdruk</AuLabel>
+            <AuCheckbox
+              id="filter-blueprint"
+              @checked={{this.isBlueprint}}
+              @onChange={{this.toggleBlueprintFilter}}
+            />
+          </div>
           <div>
             <AuLabel for="filter-title">Titel of beschrijving</AuLabel>
             <ProcessSelectByTitle
