Add icr component

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -343,6 +343,11 @@
       </div>
     </div>
 
+    {{! ICR }}
+    <div class="au-o-grid__item">
+      <Process::IcrCard @canEdit={{this.canEdit}} />
+    </div>
+
     {{! Diagrams }}
     <div class="au-o-grid__item au-u-margin-top">
 
