Introduce icr-score component

--- a/app/components/process/icr-card.hbs
+++ b/app/components/process/icr-card.hbs
@@ -24,19 +24,19 @@
             <Item>
               <:label>Beschikbaarheid</:label>
               <:content>
-                1-2-3-4-5
+                <IcrScore />
               </:content>
             </Item>
             <Item>
               <:label>Integriteit</:label>
               <:content>
-                1-2-3-4-5
+                <IcrScore />
               </:content>
             </Item>
             <Item>
               <:label>Vertrouwelijkheid</:label>
               <:content>
-                1-2-3-4-5
+                <IcrScore />
               </:content>
             </Item>
             <Item>
@@ -93,19 +93,19 @@
           <Item>
             <:label>Beschikbaarheid</:label>
             <:content>
-              1-2-3-4-5
+              <IcrScore />
             </:content>
           </Item>
           <Item>
             <:label>Integriteit</:label>
             <:content>
-              1-2-3-4-5
+              <IcrScore />
             </:content>
           </Item>
           <Item>
             <:label>Vertrouwelijkheid</:label>
             <:content>
-              1-2-3-4-5
+              <IcrScore />
             </:content>
           </Item>
           <Item>
