--- a/app/components/icr-score.hbs
+++ b/app/components/icr-score.hbs
@@ -6,7 +6,7 @@
       alt="Score {{score}}"
       {{on "mouseenter" (fn this.onMouseEnter score)}}
       {{on "mouseleave" this.onMouseLeave}}
-      {{on "click" (fn this.onClickShape score)}}
+      {{on "click" (fn this.onMouseClick score)}}
     />
   {{/each}}
 </div>
