--- a/app/templates/shared-processes/index.hbs
+++ b/app/templates/shared-processes/index.hbs
@@ -85,9 +85,11 @@
           </TableMessage>
         {{else}}
           <c.body as |process|>
-            <td>
+            <td
+              class="au-u-flex au-u-flex--spaced-tiny au-u-flex--vertical-center"
+            >
               {{#if process.isBlueprint}}
-                <CustomIcon @icon={{"Blauwdruk-icon"}} @size="large" />
+                <CustomIcon @icon={{"blueprint"}} @size="large" />
               {{/if}}
               <LinkTo
                 class="au-c-link"
