--- a/app/components/process/icr-card.hbs
+++ b/app/components/process/icr-card.hbs
@@ -24,7 +24,7 @@
             <Item>
               <:label>Beschikbaarheid</:label>
               <:content>
-                <Process::IcrCard::IcrScore
+                <Process::IcrCard::Score
                   @selectedScore={{this.availabilityScore}}
                   @onScoreChange={{this.setAvailabilityScore}}
                 />
@@ -33,7 +33,7 @@
             <Item>
               <:label>Integriteit</:label>
               <:content>
-                <Process::IcrCard::IcrScore
+                <Process::IcrCard::Score
                   @selectedScore={{this.integrityScore}}
                   @onScoreChange={{this.setIntegrityScore}}
                 />
@@ -42,7 +42,7 @@
             <Item>
               <:label>Vertrouwelijkheid</:label>
               <:content>
-                <Process::IcrCard::IcrScore
+                <Process::IcrCard::Score
                   @selectedScore={{this.confidentialityScore}}
                   @onScoreChange={{this.setConfidentialityScore}}
                 />
@@ -139,7 +139,7 @@
           <Item>
             <:label>Beschikbaarheid</:label>
             <:content>
-              <Process::IcrCard::IcrScore
+              <Process::IcrCard::Score
                 @selectedScore={{this.availabilityScore}}
               />
             </:content>
@@ -147,15 +147,13 @@
           <Item>
             <:label>Integriteit</:label>
             <:content>
-              <Process::IcrCard::IcrScore
-                @selectedScore={{this.integrityScore}}
-              />
+              <Process::IcrCard::Score @selectedScore={{this.integrityScore}} />
             </:content>
           </Item>
           <Item>
             <:label>Vertrouwelijkheid</:label>
             <:content>
-              <Process::IcrCard::IcrScore
+              <Process::IcrCard::Score
                 @selectedScore={{this.confidentialityScore}}
               />
             </:content>
